--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <body>
     <h1>IT Academy</h1>
     <ul>
+        <li><a href="./homework_4/4b/index.html">TABLE_4b</a></li>
+        <li><a href="./homework_4/4c/index.html">TABLE_4c</a></li>
+        <li><a href="./homework_4/4d/index.html">TABLE BASICS</a></li>
+        <li><a href="./homework_4/DIV_FRAME/index.html">DIV_FRAME</a></li>
+        <li><a href="./homework_5/Flexbox/index.html">FLEXBOX</a></li>
+        <li><a href="./homework_5/MAKET_DIV/index.html">MAKET_DIV</a></li>
+        <li><a href="./homework_5/MAKET_TABLE/index.html">MAKET_TABLE</a></li>
+        <li><a href="./homework_6/6d/index.html">STAR</a></li>
+        <li><a href="./homework_6/CSS_CHESS/CSS_chess.html">CHESS</a></li>
+        <li><a href="./homework_6/LINKS/index.html">LINKS</a></li>
         <li><a href="./homework_7/MAKET_ADAPT/index.html">MAKET_ADAPT</a></li>
     </ul>
 </body>
