add new homework

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="./homework_6/CSS_CHESS/CSS_chess.html">CHESS</a></li>
         <li><a href="./homework_6/LINKS/index.html">LINKS</a></li>
         <li><a href="./homework_7/MAKET_ADAPT/index.html">MAKET_ADAPT</a></li>
+        <li><a href="./homework_14/index.html">INTRODUCTION TO JS</a></li>
     </ul>
 </body>
 </html>
