--- a/homework_14/index.html
+++ b/homework_14/index.html
@@ -17,6 +17,10 @@
         alert(`ваше ФИО: ${userLastName} ${userSecondName} ${usetFirstName}`);
         alert(`ваш возраст в годах: ${userAge}`);
 
+        let yearInDay = 365;
+        let userAgeInDay = parseInt(userAge) * yearInDay;
+        alert(`ваш возраст в днях: ${userAgeInDay}`);
+
         let ageFive = 5;
         let userAgeFeature = parseInt(userAge) + ageFive;
         alert(`через 5 лет вам будет: ${userAgeFeature}`);
