add js_form file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="./homework_6/LINKS/index.html">LINKS</a></li>
         <li><a href="./homework_7/MAKET_ADAPT/index.html">MAKET_ADAPT</a></li>
         <li><a href="./homework_14/index.html">INTRODUCTION TO JS</a></li>
+        <li><a href="./homework_15/js_form/index.html">JS_FORM</a></li>
     </ul>
 </body>
 </html>
