add js_todo file

--- a/homework_15/js_form/index.html
+++ b/homework_15/js_form/index.html
@@ -111,15 +111,15 @@
     <h1>Опрос</h1>
     <form class="survey_form">
         <div class="labeled-input-container">
-            <input name="lastname" id="labeled-input" class="labeled-input" placeholder="Фамилия">
+            <input type="text" name="lastname" id="labeled-input" class="labeled-input" placeholder="Фамилия">
             <label for="labeled-input"></label>
         </div>
         <div class="labeled-input-container">
-            <input name="fname" id="labeled-input" class="labeled-input" placeholder="Имя">
+            <input type="text" name="fname" id="labeled-input" class="labeled-input" placeholder="Имя">
             <label for="labeled-input"></label>
         </div>
         <div class="labeled-input-container">
-            <input name="pname" id="labeled-input" class="labeled-input" placeholder="Отчество">
+            <input type="text" name="pname" id="labeled-input" class="labeled-input" placeholder="Отчество">
             <label for="labeled-input"></label>
         </div>
         <div class="labeled-input-container">
