add js_todo in index page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="./homework_7/MAKET_ADAPT/index.html">MAKET_ADAPT</a></li>
         <li><a href="./homework_14/index.html">INTRODUCTION TO JS</a></li>
         <li><a href="./homework_15/js_form/index.html">JS_FORM</a></li>
+        <li><a href="./homework_15/js_todo/index.html">JS_TODO</a></li>
     </ul>
 </body>
 </html>
